--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,15 +3,19 @@
   "version": "1.0.0",
   "private": false,
   "license": "BUSL-1.1",
+  "homepage": "https://grcasanova.github.io/Personal-Identity-Token",
   "dependencies": {
     "@metamask/onboarding": "^1.0.1",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.16.13",
+    "bnc-notify": "^1.9.1",
     "eth-hooks": "^2.3.13",
     "eth-sig-util": "^3.0.1",
     "ethereumjs-util": "^7.1.3",
     "ethers": "^5.5.1",
+    "gh-pages": "^3.2.3",
     "ipfs-http-client": "^53.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -23,7 +27,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "react-scripts build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
