--- a/nft/package.json
+++ b/nft/package.json
@@ -13,23 +13,26 @@
     "prettier": "^2.4.1",
     "prettier-plugin-solidity": "^1.0.0-beta.18",
     "solhint": "^3.3.6",
-    "solidity-coverage": "^0.7.16"
+    "solidity-coverage": "^0.7.17"
   },
   "dependencies": {
     "@eth-optimism/hardhat-ovm": "^0.2.3",
     "@nomiclabs/hardhat-ethers": "^2.0.2",
+    "@nomiclabs/hardhat-etherscan": "^2.1.6",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
     "@openzeppelin/contracts": "^4.3.2",
     "@tenderly/hardhat-tenderly": "^1.0.12",
     "chai": "^4.3.4",
+    "dotenv": "^10.0.0",
     "ethereum-waffle": "^3.4.0",
     "ethers": "^5.5.1",
     "hardhat": "^2.6.6",
-    "hardhat-deploy": "^0.9.4"
+    "hardhat-deploy": "^0.9.4",
+    "hardhat-gas-reporter": "^1.0.4"
   },
   "scripts": {
-    "chain": "hardhat node --network hardhat --no-deploy",
-    "fork": "hardhat node --no-deploy --network hardhat --fork https://eth-mainnet.alchemyapi.io/v2/XLbyCEcaLhQ3x_ZaKBmZqNp8UGgNGX2F",
+    "chain": "hardhat node --no-deploy --network hardhat",
+    "fork": "hardhat node --network hardhat --no-deploy --fork https://eth-mainnet.alchemyapi.io/v2/XLbyCEcaLhQ3x_ZaKBmZqNp8UGgNGX2F",
     "test": "hardhat test --network hardhat",
     "compile": "hardhat compile",
     "deploy": "hardhat deploy --export-all ../frontend/src/abi/nft.json",
@@ -38,7 +41,7 @@
     "send": "hardhat send",
     "generate": "hardhat generate",
     "account": "hardhat account",
-    "etherscan-verify": "hardhat etherscan-verify --api-key PSW8C433Q667DVEX5BCRMGNAH9FSGFZ7Q8",
+    "etherscan-verify": "hardhat etherscan-verify",
     "prettier": "prettier --write 'contracts/**/*.sol'",
     "get-ethers": "node scripts/get-ethers.js"
   }
