--- a/backend/package.json
+++ b/backend/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "@complycube/api": "^1.1.4",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "ipfs-http-client": "^54.0.2",
     "web3": "^1.6.1"
