--- a/backend/package.json
+++ b/backend/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@complycube/api": "^1.1.4",
     "cors": "^2.8.5",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "ipfs-http-client": "^54.0.2",
     "web3": "^1.6.1"
